[package]
name = "starknet-cxx"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
edition = "2021"

[dependencies]
cxx = "1.0"
starknet-types-core = { version = "0.1.1", default-features = false, features = ["curve"] }

# Using path dependency here to make development easier. However, you probably want to fetch the
# crate from GitHub instead (because the `starknet-core` crate isn't being published to crates.io
# regularly like `starknet-crypto` at the moment), which means changing the next line to:
#
# starknet-core = { git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet-core = { path = "../../../starknet-core" }

# Same as above.
#
# This entry is needed to enable the `signature-display` feature of `starknet-crypto`.
starknet-crypto = { path = "../../../starknet-crypto", default-features = false, features = ["signature-display"] }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
